tests/test_default/bad/empty.catala_en
## Article

```catala
declaration scope A:
  output x content integer
  output y content boolean

scope A:
  definition x equals 1
```

```catala-test-inline
$ catala Interpret -s A
[WARNING] In scope "A", the variable "y" is declared but never defined; did you forget something?

┌─⯈ empty.catala_en:6.10-6.11:
└─┐
6 │   output y content boolean
  │          ‾
  └─ Article
[ERROR]
This variable evaluated to an empty term (no rule that defined it applied in this situation)

┌─⯈ empty.catala_en:6.10-6.11:
└─┐
6 │   output y content boolean
  │          ‾
  └─ Article
#return code 123#
```
